cmake_minimum_required(VERSION 3.1.0)
project(TWSAPI VERSION 9.71.0)

set(TWS_API_LIBRARY tws_cpp_api)
set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../Src)
set(API_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(IB_POSIX_CLIENT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../source/PosixClient/Shared)
set(IB_POSIX_CLIENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../source/PosixClient/src)
set(IB_POSIX_CLIENT_LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../source/PosixClient/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${IB_POSIX_CLIENT_LIBRARY_DIR})

file(GLOB SOURCES ${SRC_DIR}/*.cpp)

add_definitions(-D_REENTRANT -D_DEBUG)

include_directories(${API_INCLUDE_DIR} ${SRC_DIR} ${IB_POSIX_CLIENT_INCLUDE_DIR} ${IB_POSIX_CLIENT_SOURCE_DIR})

add_library(${TWS_API_LIBRARY} STATIC ${API_INCLUDES} ${SOURCES} ${IB_POSIX_CLIENT_SOURCES} ${IB_POSIX_CLIENT_INCLUDES})

target_compile_options(${TWS_API_LIBRARY} PUBLIC -Wall -Werror -std=gnu++0x)

set_source_files_properties(${API_INCLUDES} ${IB_POSIX_CLIENT_INCLUDES} ${IB_POSIX_CLIENT_SOURCES}
						    PROPERTIES HEADER_FILE_ONLY TRUE)


